--- a/FED1STUDIOProject/StyleSheets/StyleSheetAlpha.css
+++ b/FED1STUDIOProject/StyleSheets/StyleSheetAlpha.css
@@ -1,6 +1,11 @@
 ﻿body {
     background-color: Khaki;
 }
+
+header{
+    background-color: darkgray;
+}
+
 h1{
     color:darkred;
 }
@@ -11,7 +16,11 @@ p{
 
 h2{
     font-style: italic;
-    color:darkgreen;
+    color:darkorchid;
+}
+
+footer{
+    background-color: darkgray;
 }
 
 #FT{
