--- a/FED1STUDIOProject/StyleSheets/StyleSheetAlpha.css
+++ b/FED1STUDIOProject/StyleSheets/StyleSheetAlpha.css
@@ -1,57 +1,103 @@
-﻿body {
-    background-color: Khaki;
+﻿@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap');
+/*font-family: 'Yuji Syuku', serif*/
+
+
+
+body {
+    background-color: #A62B24;
 }
 
 header {
-    background-color: #ED8A11;
-    color: #234399;
+    background-color: #A62B24;
+    color: #EBFFF9;
 }
 
 h1 {
-    color: #234399;
+    color: #EBFFF9;
 }
 
-p{
-    color: darkblue;
-    font-family: Papyrus;
+p {
+    color: black;
+    font-family: fantasy;
 }
 
 h2 {
     font-style: italic;
-    color: #992811;
+    color: #EBFFF9;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 li {
-    display: inline;
     float: left;
-    padding: 8px;
+}
+.info{
     display: block;
-    background-color: darkgray;
-    color: #992811;
+    padding: 14px;
+    color: black;
 }
 
-#FT{
+    li a {
+        display: block;
+        padding: 8px;
+        background-color: darkgrey;
+        color: black;       
+    }
+
+#FT {
     font-style: italic;
     font-size: 20px;
-    color: purple
+    color: black
 }
 
-nav ul{
-    background-color: black;
+nav ul {
     padding: 0;
     border-top: 4px medium;
-    border-bottom: 4px medium;        
+    border-bottom: 4px medium;
 }
 
-nav ul li{
-    display: inline-block;
-}
+    nav ul li {
+        display: inline-block;
+    }
 
-nav a:hover, nav a:active, nac a:focus{
+nav a:hover, nav a:active, nac a:focus {
     text-decoration: none;
 }
 
-nav ul li:hover{
-    background-color: orange;
+nav ul li:hover {
+    background-color: #021699;
 }
 
+main section h2 {
+    font: 'Yuji Syuku', serif;
+    font-size: 1.25em;
+}
+
+.aline-center {
+    text-align: center;
+}
+
+.aline-left {
+    text-align: left;
+}
+
+.aline-right {
+    text-align: right;
+}
+
+.bottom-nav {
+    background-color: darkblue;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%
+}
+
+ul.a{
+    list-style-type: circle
+}
