--- a/FED1STUDIOProject/StyleSheets/Style.css
+++ b/FED1STUDIOProject/StyleSheets/Style.css
@@ -9,8 +9,7 @@
 }
 
 main {
-    background-color: white;
-    opacity: .8;
+    background-color: rgba(255, 255 ,255 ,.8);
 }
 
 nav {
@@ -55,7 +54,7 @@ li {
     margin: 5px;
     margin-left: 15px;
     text-align: center;
-    font-size: 2em;
+    font-size: em;
 }
 
 .smallBoxL {
@@ -191,4 +190,9 @@ thread{
 
 tbody tr:nth-child(even){
     background-color: red;
+}
+
+.boxed{
+    border: 2px solid black;
+    border-collapse: collapse;
 }
